specifications/traefik/revue-traefik-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: multi-service-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`revue-frontend`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-frontend
          port: 8080
    - match: Host(`revue-auth`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-auth
          port: 4000
    - match: Host(`revue-user`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-user
          port: 4006
    - match: Host(`revue-device`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-device
          port: 4007
    - match: Host(`revue-monitoring`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-monitoring
          port: 4001
    - match: Host(`revue-notification`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-notification
          port: 4004
    - match: Host(`revue-log`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-log
          port: 4003
    - match: Host(`revue-alarm`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-alarm
          port: 4002
    - match: Host(`revue-location`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: revue-location
          port: 4008
